k8s/SCG/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: test-service
  name: test-service
spec:
  type: ClusterIP
  selector:
    component: test-service
    run: test-service
  ports:
  - port: 8100
    targetPort: 8100
    protocol: TCP
